--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.1.4",
     "apollo-server-express": "^3.9.0",
+    "class-validator": "^0.13.2",
     "graphql": "^16.5.0",
     "graphql-tools": "^8.2.12",
     "mysql2": "^2.3.3",
