--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "apollo-server-express": "^3.9.0",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "firebase-admin": "^11.0.1",
     "graphql": "^16.5.0",
     "graphql-tools": "^8.2.12",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
+    "passport-firebase-jwt": "^1.2.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
