--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 product-shop-be-firebase-adminsdk-qa9rw-e5e384be15.json
 product-shop-be-firebase-adminsdk-qa9rw-d241e6d3de.json
 firebase.config.json
+.env
+
 # Logs
 logs
 *.log
